fixing nav display on mobile orientation change

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -71,6 +71,16 @@
     .project-card {
         flex-direction: column;
 
+        &:hover {
+            .arrow-container {
+                display: none;
+            }
+        }
+
+        .arrow-container {
+            display: none;
+        }
+
         .project-card-thumbnail {
             width: 100%;
             height: 200px;
@@ -86,6 +96,7 @@
         .project-card-details {
             margin-left: 0;
             margin-top: 16px;
+
             h4 {
                 font-size: 24px;
                 font-weight: bold;
